2005-12-11 Emfox Zhou  <emfoxzhou@gmail.com>

	* src/view/telnetcon.h
	src/view/telnetview.cpp
	src/view/telnetcon.cpp: coordinate with maple bbs for Mouse Support.

2005-12-08 Emfox Zhou  <emfoxzhou@gmail.com>

	* src/core/termview.cpp,
	src/core/termview.h,
	src/view/telnetview.cpp,
	src/view/telnetview.h: add Mouse Wheel Scrolling Support for menu and list.

	* src/mainframe.cpp: add myself as developer in About Dialog.

	* TODO: update
	
2005-12-05  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.cpp: CMainFrame::OnNotebookPopupMenu, added "Add to
	Favorites" item.

	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: updated related po files.

2005-12-05  Emfox Zhou  <emfoxzhou@gmail.com>

	* src/core/termview.cpp,
	src/core/termview.h,
	src/view/telnetcon.h,
	src/view/telnetview.cpp,
	src/view/telnetcon.cpp,
	src/view/telnetview.h: add Mouse Support for menu and list click. Current
	code is a little ugly and will be reworked soon.

	* TODO: metion ugly code of mouse support.

	* AUTHORS: add myself.

2005-12-04  Youchen Lee  <copyleft@utcr.org>

	* src/mainframe.h,
	src/mainframe.cpp: added CMainFrame::OnNotebookPopupMenu -- show popup-menu
	with "Close" and "Reconnect" menu items when right check mouse botton on 
	connection tabs.
	
	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: updated related po files.

2005-12-04  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po : revise po files.

2005-11-15  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/sitepage.cpp,
	src/sitepage.h,
	src/generalprefpage.cpp,
	src/generalprefpage.h : move align checkbox to sitepage.cpp

2005-11-13  FourDollars (Shih-yuan Lee)  <fourdollars@gmail.com>

	* src/generalprefpage.h,
	src/generalprefpage.cpp,
	po/pcmanx.pot,
	po/zh_TW.po : Add align center checkbox to generalprefpage.cpp.

2005-11-07  Jim Huang  <jserv@kaffe.org>

	* src/pcmanx_pure_gtk2.cpp,
	src/pcmanx_gtk2.cpp: Rename from the former to the later.
